--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -52,6 +52,10 @@
     padding: 3px;
     .title {
       font-weight: bold;
+      a {
+        text-decoration: none;
+        color: $primary;
+      }
     }
   }
 }
