--- a/app/assets/stylesheets/config/colors.scss
+++ b/app/assets/stylesheets/config/colors.scss
@@ -7,3 +7,6 @@ $light-yellow: #eae2b7;
 $background: #d9d9d9;
 $light: #f6f8f9;
 $light-gray: #f0ede9;
+
+$box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+  4px 4px 0 0 $primary;
