--- a/app/assets/stylesheets/events/event-show.scss
+++ b/app/assets/stylesheets/events/event-show.scss
@@ -3,38 +3,124 @@
   padding: 0 100px;
   display: flex;
   margin-top: 20px;
-  height: 100vh;
+  height: fit-content;
+  color: $primary;
+  padding: 20px 50px;
   .event-details {
-    width: 50%;
+    .event-image {
+      width: 100%;
+      height: 50%;
+      overflow: hidden;
+      border-radius: 5px;
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    border: 3px solid $primary;
+
+    width: 60%;
     height: fit-content;
-    margin-left: 20px;
     background-color: $light;
     height: 100%;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
       4px 4px 0 0 $primary;
-    .info {
-      display: flex;
-      justify-content: space-between;
-      align-items: start;
-      padding: 0 20px;
-      flex-direction: column;
-    }
-    .title {
-      font-size: 22px;
-      font-weight: 700;
-      color: $primary;
-      margin-bottom: 5px;
-      text-decoration: none;
-    }
-
-    %test {
+    .event-name {
+      font-weight: bold;
+      margin-bottom: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      color: $secondary;
-      font-size: 15px;
+      a {
+        font-size: 20px;
+        color: $secondary;
+      }
+    }
+    .event-description {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    .event-date {
+      font-size: 20px;
+      margin-bottom: 20px;
+      div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .time-label {
+        font-weight: bold;
+      }
+    }
+    .countdown {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+      .timer-container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        background-color: $light-gray;
+        padding: 5px;
+        box-shadow: $box-shadow;
+        margin: 0 10px;
+        .timer {
+          font-size: 40px;
+          font-weight: bold;
+          margin: 0 10px;
+          color: $yellow;
+        }
+      }
+
+      .time-label {
+        font-weight: bold;
+      }
+    }
+  }
+  .event-location {
+    width: 40%;
+    height: fit-content;
+    margin-left: 20px;
+    background-color: $light;
+    height: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: $box-shadow;
+    border: 3px solid $primary;
+    position: sticky;
+    top: 20px;
+    .event-location-title {
+      font-weight: bold;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      a {
+        font-size: 20px;
+        color: $secondary;
+      }
+    }
+    .event-location-description {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    .event-location-map {
+      width: 100%;
+      height: 300px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 }
