--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -64,3 +64,25 @@
     font-size: 30px;
   }
 }
+
+@media (max-width: 768px) {
+  .home-container {
+    padding: 0 20px;
+    .main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      place-items: center;
+      .banner {
+        width: 200px;
+      }
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+}
