--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -27,6 +27,37 @@
       }
     }
   }
+
+  .club {
+    width: 100%;
+    height: 100px;
+    box-shadow: $box-shadow;
+    border-radius: 10px;
+    background-color: $light-yellow;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 20px;
+    .club-info {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      .club-name {
+        font-size: 1.5em;
+        font-family: sans-serif;
+        color: $primary;
+      }
+      .club-description {
+        font-size: 1.1em;
+        font-family: sans-serif;
+        color: $secondary;
+      }
+    }
+  }
 }
 
 .profile-info {
