--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -46,7 +46,7 @@
     background-color: $yellow;
   }
   .event {
-    background-color: $light-yellow;
+    background-color: $light;
     border-radius: 5px;
     margin-bottom: 5px;
     padding: 3px;
