--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -28,33 +28,57 @@
     }
   }
 
-  .club {
-    width: 100%;
-    height: 100px;
-    box-shadow: $box-shadow;
-    border-radius: 10px;
-    background-color: $light-yellow;
+  .clubs {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
-    margin-bottom: 20px;
-    .club-info {
+    .club {
+      width: 48%;
+      height: 70px;
+      box-shadow: $box-shadow;
+      border-radius: 10px;
+      background-color: $light-yellow;
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
-      .club-name {
-        font-size: 1.5em;
-        font-family: sans-serif;
-        color: $primary;
+      margin-bottom: 20px;
+      .club-image {
+        width: 60px;
+        height: 60px;
+        border-radius: 10px;
+        overflow: hidden;
+        img {
+          height: 100%;
+        }
       }
-      .club-description {
-        font-size: 1.1em;
-        font-family: sans-serif;
-        color: $secondary;
+      .club-info {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        padding: 10px;
+        width: 60%;
+        .club-name a {
+          color: $primary;
+          text-decoration: none;
+          font-size: 15px;
+          font-weight: 600;
+        }
+        .club-members {
+          font-size: 1em;
+          font-family: sans-serif;
+          color: $secondary;
+        }
+
+        .club-description {
+          font-size: 1.1em;
+          font-family: sans-serif;
+          color: $secondary;
+        }
       }
     }
   }
