--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -82,7 +82,11 @@
                 </div>
                 <div class="author">
                   <div class="avatar">
-                    <%= cl_image_tag post.user.avatar.key if post.user.avatar.attached? %>
+                    <%if current_user.avatar.attached?%>
+                      <%=cl_image_tag(current_user.avatar.key)%>
+                    <%else%>
+                      <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
+                    <%end%>
                   </div>
                   <div class="name">
                     <p> <%= post.user.full_name%></p>
