--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -82,8 +82,8 @@
                 </div>
                 <div class="author">
                   <div class="avatar">
-                    <%if current_user.avatar.attached?%>
-                      <%=cl_image_tag(current_user.avatar.key)%>
+                    <%if post.user.avatar.attached?%>
+                      <%=cl_image_tag(post.user.avatar.key)%>
                     <%else%>
                       <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
                     <%end%>
@@ -114,12 +114,11 @@
                     <% post.comments.each do |comment|%>
                       <div class="comment">
                         <div class="avatar">
-                          <%if current_user.avatar.attached?%>
-                            <%=cl_image_tag(current_user.avatar.key)%>
+                          <%if comment.user.avatar.attached?%>
+                            <%=cl_image_tag(comment.user.avatar.key)%>
                           <%else%>
                             <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
-                          <%end%>
-                        </div>
+                          <%end%>                        </div>
                         <div class="comment-content">
                           <p class="comment-author"><%= comment.user.full_name%></p>
                           <p><%= comment.content%></p>
