--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,13 +19,13 @@
     <div class="members">
       <div class="member">
         <div class="member-pic">
-          <img class="round-pic" src="https://images.theconversation.com/files/101304/original/image-20151109-29337-8av479.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="">
+          <img class="round-pic" src="https://res.cloudinary.com/dgpk6t1we/image/upload/v1708179464/about/draw-a-good-stickman_z3m4dy.jpg" alt="">
         </div>
         <div class="member-name">
           <p>Hatim</p>
         </div>
         <div class="member-description">
-          <p>Our CEO and founder, Hatim is the visionary behind CodeCrafters Inc. He is a full-stack developer with a passion for creating innovative solutions to everyday problems. Hatim is a natural leader who is always ready to take on new challenges and inspire his team to do the same.</p>
+          <p>He's that guy</p>
         </div>
         <div class="member-socials">
           <a href="">
@@ -41,13 +41,15 @@
       </div>
       <div class="member">
         <div class="member-pic">
-          <img class="round-pic" src="https://images.theconversation.com/files/101304/original/image-20151109-29337-8av479.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="">
+          <img class="round-pic" src="https://res.cloudinary.com/dgpk6t1we/image/upload/v1708179708/about/raw_chicken_girl_s8ok6z.jpg" alt="">
         </div>
         <div class="member-name">
           <p>Ghita</p>
         </div>
         <div class="member-description">
-          <p>Our CEO and founder, Hatim is the visionary behind CodeCrafters Inc. He is a full-stack developer with a passion for creating innovative solutions to everyday problems. Hatim is a natural leader who is always ready to take on new challenges and inspire his team to do the same.</p>
+          <p>Once but a tadpole, Ghita ventured into adult froghood before being cursed to walk amongst us as a human being. She must now pay taxes.
+            Contact her at heeeelphelpmeeehelp@gmail.com
+          </p>
         </div>
         <div class="member-socials">
           <a href="">
@@ -63,13 +65,13 @@
       </div>
       <div class="member">
         <div class="member-pic">
-          <img class="round-pic" src="https://images.theconversation.com/files/101304/original/image-20151109-29337-8av479.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="">
+          <img class="round-pic" src="https://res.cloudinary.com/dgpk6t1we/image/upload/v1708180488/about/DSC00908_powe81.jpg" alt="">
         </div>
         <div class="member-name">
           <p>Ilyass</p>
         </div>
         <div class="member-description">
-          <p>Our CEO and founder, Hatim is the visionary behind CodeCrafters Inc. He is a full-stack developer with a passion for creating innovative solutions to everyday problems. Hatim is a natural leader who is always ready to take on new challenges and inspire his team to do the same.</p>
+          <p>Ilyass is the kinda guy that will make your girlfriend leave you if he got too close</p>
         </div>
         <div class="member-socials">
           <a href="">
@@ -85,13 +87,13 @@
       </div>
       <div class="member">
         <div class="member-pic">
-          <img class="round-pic" src="https://images.theconversation.com/files/101304/original/image-20151109-29337-8av479.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="">
+          <img class="round-pic" src="https://res.cloudinary.com/dgpk6t1we/image/upload/v1708180490/about/DSC00923_oknqc4.jpg" alt="">
         </div>
         <div class="member-name">
           <p>Ismail</p>
         </div>
         <div class="member-description">
-          <p>Our CEO and founder, Hatim is the visionary behind CodeCrafters Inc. He is a full-stack developer with a passion for creating innovative solutions to everyday problems. Hatim is a natural leader who is always ready to take on new challenges and inspire his team to do the same.</p>
+          <p>Ismail is just everyones friend (and he's good at selling things) </p>
         </div>
         <div class="member-socials">
           <a href="">
