--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container">
   <div class="main">
     <div class="banner">
-      <%= image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707159631/assets/2gather_logo_ruyjpc.png")%>
+      <%= cl_image_tag("assets/2gather_logo_ruyjpc.png")%>
     </div>
     <div class="header">
       <h1>
