fixing cloudinary image assets

--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -167,6 +167,12 @@
     top: -100px;
     height: 200px;
     width: 200px;
+    img{
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+
+    }
   }
 }
 
