--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -114,11 +114,9 @@
                     <% post.comments.each do |comment|%>
                       <div class="comment">
                         <div class="avatar">
-                          <%if comment.user.avatar.attached?%>
-                            <%=cl_image_tag(comment.user.avatar.key)%>
-                          <%else%>
-                            <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
-                          <%end%>                        </div>
+
+                          <%=cl_image_tag(comment.user.url)%>
+                        </div>
                         <div class="comment-content">
                           <p class="comment-author"><%= comment.user.full_name%></p>
                           <p><%= comment.content%></p>
