--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,11 +30,7 @@
       <li>
         <div class="dropdown">
           <div class="avatar" data-action="click->navbar#toggleMenu" data-navbar-target="avatar">
-            <%if current_user.avatar.attached?%>
-              <%=cl_image_tag(current_user.avatar.key,:gravity=>"center", :height=>100, :quality=>"auto", :width=>100, :crop=>"fill")%>
-            <%else%>
-              <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
-            <%end%>
+              <%=cl_image_tag(current_user.avatar_url,height: 50, width: 50, crop: "scale", quality: "auto")%>
           </div>
           <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton" data-navbar-target="menu">
             <a class="dropdown-item" href="/profile">Profile</a>
