--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -82,11 +82,10 @@
                 </div>
                 <div class="author">
                   <div class="avatar">
-                    <%if post.user.avatar.attached?%>
-                      <%=cl_image_tag(post.user.avatar.key)%>
-                    <%else%>
-                      <%=image_tag("https://res.cloudinary.com/dgpk6t1we/image/upload/v1707165672/assets/27470339_7294787_bxgffu.jpg")%>
-                    <%end%>
+                    <a href="/profile/<%=post.user.id%>">
+                      <%=cl_image_tag(post.user.avatar_url)%>
+                    </a>
+
                   </div>
                   <div class="name">
                     <p> <%= post.user.full_name%></p>
@@ -114,11 +113,13 @@
                     <% post.comments.each do |comment|%>
                       <div class="comment">
                         <div class="avatar">
+                          <a href="/profile/<%=comment.user.id%>">
+                            <%=cl_image_tag(comment.user.avatar_url)%>
+                          </a>
 
-                          <%=cl_image_tag(comment.user.url)%>
                         </div>
                         <div class="comment-content">
-                          <p class="comment-author"><%= comment.user.full_name%></p>
+                          <a href="/profile/<%=comment.user.id%> class="comment-author"><%= comment.user.full_name%></a>
                           <p><%= comment.content%></p>
                         </div>
                       </div>
