--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,24 +5,24 @@
   <div class="profile-info">
     <div class="left">
       <div class="avatar profile">
-          <%=cl_image_tag(current_user.avatar_url,:gravity=>"center", :height=>250, :quality=>"auto", :width=>250, :crop=>"fill")%>
+        <%=cl_image_tag(@user.avatar_url,:gravity=>"center", :height=>250, :quality=>"auto", :width=>250, :crop=>"fill")%>
       </div>
       <div class="info-section">
-        <h5><em><%=current_user.full_name%></em>
+        <h5><em><%=@user.full_name%></em>
           <a href="users/edit">
             <i class="fa-solid fa-pen-to-square"></i>
           </a>
         </h5>
         <p class="description">Description</p>
-        <p class="mail"><%=current_user.email%></p>
+        <p class="mail"><%=@user.email%></p>
       </div>
       <div class="stats">
         <div class="stat1">
-          <p class="member-stat"><%=current_user.member_of_clubs.count%></p>
+          <p class="member-stat"><%=@user.member_of_clubs.count%></p>
           <h6>MEMBER</h6>
         </div>
         <div class="stat2">
-          <p class="admin-stat"><%=current_user.owned_clubs.count%></p>
+          <p class="admin-stat"><%=@user.owned_clubs.count%></p>
           <h6>ADMIN</h6>
         </div>
         <div class="stat3">
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="bio">
-        <p><%=current_user.bio%></p>
+        <p><%=@user.bio%></p>
       </div>
       <div class="social-links">
         <a href=""></a>
