--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,10 +30,10 @@
       <li>
         <div class="dropdown">
           <div class="avatar" data-action="click->navbar#toggleMenu" data-navbar-target="avatar">
-              <%=cl_image_tag(current_user.avatar_url,height: 50, width: 50, crop: "scale", quality: "auto")%>
+            <%=cl_image_tag(current_user.avatar_url,height: 50, width: 50, crop: "scale", quality: "auto")%>
           </div>
           <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton" data-navbar-target="menu">
-            <a class="dropdown-item" href="/profile">Profile</a>
+            <a class="dropdown-item" href="/profile/<%=current_user.id%>">Profile</a>
             <a href="">My clubs</a>
             <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
           </div>
