--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -22,7 +22,8 @@
     padding: 0 20px;
 
     .banner {
-      width: fit-content;
+      max-width: 1000px;
+
       img {
         width: 100%;
       }
