still fixing assets bugs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container">
   <div class="main">
     <div class="banner">
-      <%= cl_image_tag("assets/2gather_logo_ruyjpc.png",quality: "auto")%>
+      <%= cl_image_tag("assets/2gather_logo.png",quality: "auto")%>
     </div>
     <div class="header">
       <h1>
