--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <li>
       <div class="logo">
         <a href="/">
-          <%=cl_image_tag("assets/2gather_logo_ruyjpc.png") %>
+          <%=cl_image_tag("assets/2gather_logo.png") %>
         </a>
       </div>
     </li>
