some ui changes : index club card

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -1,5 +1,5 @@
 .home-container {
-  background-image: url("https://res.cloudinary.com/dgpk6t1we/image/upload/c_fill,h_1080,q_auto:eco,w_1920/v1707159577/assets/vecteezy_sketch-in-doodle-style-group-of-funny-people-vector_17647157_Converted_g68f24.jpg");
+  background-image: url("https://res.cloudinary.com/dgpk6t1we/image/upload/c_fill,h_1080,q_auto:eco,w_1920/v1707159577/development/assets/home_background.png");
   background-color: $light-yellow;
   background-blend-mode: screen;
   background-repeat: no-repeat;
