--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -42,6 +42,7 @@ nav {
 
   .logo {
     width: 100px;
+    height: 100%;
     img {
       width: 100%;
     }
@@ -132,19 +133,23 @@ nav a {
 }
 @media (max-width: 610px) {
   .nav {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      right: -100%;
-      z-index: 100;
-      transition: all 0.2s ease-in-out;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 100;
+    transition: all 0.2s ease-in-out;
   }
-  .nav-links li {margin-top: 40px;}
-  .nav-links li a {padding: 10px;}
+  .nav-links li {
+    margin-top: 40px;
+  }
+  .nav-links li a {
+    padding: 10px;
+  }
   // .open-menu , .close-menu {display: block;}
   // #check:checked ~ .menu {right: 0;}
 }
