--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
   <nav data-controller="navbar">
-  <ul>
+  <ul h-full>
     <li>
-      <div class="logo">
+      <div class="logo flex align-center">
         <a href="/">
-          <%=cl_image_tag("assets/2gather_logo.png") %>
+          <%=cl_image_tag("development/assets/2gather_logo.png", :height=>40, :quality=>"auto:low", :crop=>"scale")%>
         </a>
       </div>
     </li>
@@ -46,5 +46,3 @@
     <%end%>
   </ul>
 </nav>
-</body>
-</html>
