--- a/app/assets/stylesheets/clubs/index.scss
+++ b/app/assets/stylesheets/clubs/index.scss
@@ -41,19 +41,26 @@
   .club-card {
     width: 100%;
     height: 350px;
-    border: solid 3px $primary;
+    // border: solid 3px $primary;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
+    // box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
     background-color: $orange;
     margin-right: 20px;
-    box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
-      4px 4px 0 0 $primary;
+    // box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+    //   4px 4px 0 0 $primary, 5px 5px 0 0 $primary, 6px 6px 0 0 $primary;
     flex-grow: 1;
+    transition: all 0.3s ease-out;
+    &:hover {
+      transform: translate(-2px, -2px);
+      box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary,
+        3px 3px 0 0 $primary, 4px 4px 0 0 $primary, 5px 5px 0 0 $primary,
+        6px 6px 0 0 $primary;
+    }
     .card-header {
       display: flex;
       justify-content: space-between;
@@ -70,7 +77,6 @@
       width: 100%;
       height: 100%;
       text-align: center;
-      padding: 5px;
       background-color: $yellow;
       border-radius: 10px;
 
@@ -95,7 +101,7 @@
         height: 20%;
         width: 100%;
         text-align: center;
-        padding: 5px;
+        padding: 10px;
         background-color: $yellow;
         border-radius: 10px;
         .card-title {
@@ -140,8 +146,11 @@
         align-items: center;
         font-size: 13px;
         margin-bottom: 10px;
+        padding: 0 10px;
         a {
           width: 100%;
+          font-size: 15px;
+          font-weight: 700;
         }
       }
 
@@ -164,21 +173,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    background-color: $light;
-    border: solid 3px $primary;
+    background-color: $light-yellow;
     border-radius: 10px;
-    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
+      4px 4px 0 0 $primary;
 
     .chackbox {
       margin: 10px;
     }
-  }
-
-  .main {
-    width: 60%;
-    margin-right: 10px;
-  }
-  .secondary {
-    width: 40%;
   }
 }
