--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,11 +2,11 @@
   outline: 0;
   font-size: 1em;
   font-weight: 600;
-  border: solid 3px $primary;
+  // border: solid 3px $primary;
   border-radius: 7px;
   transition: all 0.3s ease-out;
-  box-shadow: inset -2px -4px 0 0 rgba(0, 0, 0, 0.2), 1px 1px 0 0 $primary,
-    2px 2px 0 0 $primary, 3px 3px 0 0 $primary;
+  // box-shadow: inset -2px -4px 0 0 rgba(0, 0, 0, 0.2), 1px 1px 0 0 $primary,
+  //   2px 2px 0 0 $primary, 3px 3px 0 0 $primary, 4px 4px 0 0 $primary;
   text-decoration: none;
   color: $primary;
   text-align: center;
