--- a/app/assets/stylesheets/components/_checkbox.scss
+++ b/app/assets/stylesheets/components/_checkbox.scss
@@ -13,7 +13,7 @@
   -ms-user-select: none;
 }
 .checkbox-rect2 input[type="checkbox"]:hover + label:hover {
-  color: rgb(23, 86, 228);
+  color: $orange;
 }
 .checkbox-rect2 input[type="checkbox"]:hover + label:before {
   border: 1px solid $primary;
@@ -36,7 +36,7 @@
   transition: all 0.2s, background 0.2s ease-in-out;
   background: rgba(255, 255, 255, 0.03);
   box-shadow: -2px -1px 0 #343a3f;
-  background: #f3f3f3;
+  background: $light;
 }
 .checkbox-rect2 input[type="checkbox"]:checked + label:before {
   border: 2px solid #fff;
