--- a/app/assets/stylesheets/config/colors.scss
+++ b/app/assets/stylesheets/config/colors.scss
@@ -3,7 +3,7 @@ $secondary: #5b5b5b;
 $orange: #f77f00;
 $red: #d62828;
 $yellow: #fcbf49;
-$light-yellow: #eae2b7;
+$light-yellow: #fcf7d9;
 $background: #d9d9d9;
 $light: #f6f8f9;
 $light-gray: #f0ede9;
