--- a/app/assets/stylesheets/clubs/index.scss
+++ b/app/assets/stylesheets/clubs/index.scss
@@ -1,17 +1,10 @@
 @import "./new";
 .clubs-container {
   width: 100%;
-  padding: 0 70px;
   display: flex;
   flex-direction: column;
   margin-top: 20px;
   height: fit-content;
-
-  .clubs-body {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-  }
 
   .clubs-header {
     height: 150px;
@@ -24,23 +17,12 @@
 
   .clubs {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     justify-content: start;
-    width: 100%;
     height: fit-content;
-    margin-right: 20px;
-  }
-
-  @media screen and (max-width: 768px) {
-    .clubs {
-      grid-template-columns: 1fr 1fr;
-    }
   }
 
   .club-card {
-    width: 100%;
-    height: 350px;
     // border: solid 3px $primary;
     border-radius: 10px;
     display: flex;
@@ -50,7 +32,6 @@
     padding: 5px;
     // box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
     background-color: $orange;
-    margin-right: 20px;
     // box-shadow: 1px 1px 0 0 $primary, 2px 2px 0 0 $primary, 3px 3px 0 0 $primary,
     //   4px 4px 0 0 $primary, 5px 5px 0 0 $primary, 6px 6px 0 0 $primary;
     flex-grow: 1;
@@ -79,7 +60,6 @@
       text-align: center;
       background-color: $yellow;
       border-radius: 10px;
-
       .card-image {
         border-radius: 10px;
         overflow: hidden;
@@ -166,7 +146,6 @@
     }
   }
   .clubs-sidebar {
-    width: 20%;
     height: fit-content;
     padding: 20px;
     display: flex;
@@ -183,3 +162,14 @@
     }
   }
 }
+
+// @media screen and (max-width: 768px) {
+//   .clubs {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
+// @media screen and (max-width: 768px) {
+//   .clubs {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
