--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,85 +21,85 @@
   }
 }
 
-nav {
-  width: 100%;
-  height: 40px;
-  background-color: $orange;
-  padding: 1.8rem 3rem;
-  top: 0;
-  border-bottom: solid 3px $primary;
-  box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
+// nav {
+//   width: 100%;
+//   height: 40px;
+//   background-color: $orange;
+//   padding: 1.8rem 3rem;
+//   top: 0;
+//   box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
 
-  ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    padding: 0 2rem;
-    height: 100%;
-    width: 100%;
-  }
+//   ul {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     list-style: none;
+//     padding: 0 2rem;
+//     height: 100%;
+//     width: 100%;
+//   }
 
-  .logo {
-    width: 100px;
-    height: 100%;
-    img {
-      width: 100%;
-    }
-  }
-}
+//   .logo {
+//     width: 100px;
+//     height: 100%;
+//     img {
+//       width: 100%;
+//     }
+//   }
+// }
 
-.nav-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  margin-right: 2rem;
-}
+// .nav-links {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   width: 100%;
+//   height: 100%;
+//   margin-right: 2rem;
+// }
 
-nav a {
-  margin-right: 10px;
-  font-weight: 600;
-  text-decoration: none;
-  color: $primary;
-}
+// nav a {
+//   margin-right: 10px;
+//   font-weight: 600;
+//   text-decoration: none;
+//   color: $primary;
+// }
 
-.search {
-  border-radius: 5px;
-}
+// .search {
+//   border-radius: 5px;
+// }
 
-.search-bar {
-  background-color: white;
-  border-radius: 5px;
-  border: solid 3px $primary;
-  height: 40px;
-  padding: 0 0 0 1rem;
-  /* width: 100px; */
-}
+// .search-bar {
+//   background-color: white;
+//   border-radius: 5px;
+//   border: solid 3px $primary;
+//   height: 40px;
+//   padding: 0 0 0 1rem;
+//   /* width: 100px; */
+// }
 
-.search-bar input[type="search"] {
-  background: transparent;
-  width: 80%;
-  height: 100%;
-  font-size: 0.9rem;
-  border: none;
-  outline: none;
-  color: $primary;
-}
+// .search-bar input[type="search"] {
+//   background: transparent;
+//   width: 80%;
+//   height: 100%;
+//   font-size: 0.9rem;
+//   border: none;
+//   outline: none;
+//   color: $primary;
+// }
 
-.nav-icons {
-  width: 7%;
-  color: $primary;
-  font-size: 25px;
-  div {
-    display: flex;
-    justify-content: space-between;
-  }
-}
+// .nav-icons {
+//   width: 7%;
+//   color: $primary;
+//   font-size: 25px;
+//   div {
+//     display: flex;
+//     justify-content: space-between;
+//   }
+// }
 
 .dropdown {
   position: relative;
+  transition: all 0.2s ease-in-out;
 }
 
 .dropdown-menu {
@@ -107,21 +107,16 @@ nav a {
   top: 110%;
   right: 0;
   background-color: white;
-  border: solid 3px $primary;
   border-radius: 10px;
   padding: 10px;
   z-index: 1;
   box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
-  width: 100px;
+  width: 200px;
   text-align: center;
   a {
     display: block;
     margin: 5px 0;
   }
-}
-
-.dropdown-menu.show {
-  display: block;
 }
 
 .hide {
@@ -131,25 +126,25 @@ nav a {
 .logout {
   width: fit-content;
 }
-@media (max-width: 610px) {
-  .nav {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    z-index: 100;
-    transition: all 0.2s ease-in-out;
-  }
-  .nav-links li {
-    margin-top: 40px;
-  }
-  .nav-links li a {
-    padding: 10px;
-  }
-  // .open-menu , .close-menu {display: block;}
-  // #check:checked ~ .menu {right: 0;}
-}
+// @media (max-width: 610px) {
+//   .nav {
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     width: 80%;
+//     height: 100vh;
+//     position: fixed;
+//     top: 0;
+//     right: -100%;
+//     z-index: 100;
+//     transition: all 0.2s ease-in-out;
+//   }
+//   .nav-links li {
+//     margin-top: 40px;
+//   }
+//   .nav-links li a {
+//     padding: 10px;
+//   }
+//   // .open-menu , .close-menu {display: block;}
+//   // #check:checked ~ .menu {right: 0;}
+// }
