--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-  <nav data-controller="navbar">
-  <ul h-full>
+ <!--<nav data-controller="navbar">
+  <ul>
     <li>
       <div class="logo flex align-center">
         <a href="/">
@@ -8,8 +8,8 @@
       </div>
     </li>
     <%if user_signed_in?%>
-      <li>
-        <div class="nav-links" >
+      <li class="h-full">
+        <div class="h-full">
           <a href="/">Home</a>
           <a href="/clubs">Clubs</a>
           <a href="/about">About us</a>
@@ -43,29 +43,120 @@
       <li>
         <%= link_to "Login", new_user_session_path, class: "nav-link text-light" %>
       </li>
-      <li>
-        <div class="relative inline-block text-left">
-          <div>
-            <button type="button" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
-              Options
-              <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
-              </svg>
-            </button>
+    <%end%>
+  </ul>
+</nav>-->
+
+<nav class="bg-orange px-8 sticky top-0 z-50" data-controller="navbar">
+  <%if user_signed_in?%>
+    <div class="mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <!-- Mobile menu button-->
+          <button type="button" data-action="click->navbar#toggleMobileMenu" class="relative inline-flex items-center justify-center rounded-md p-2 text-primary focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+            <span class="absolute -inset-0.5"></span>
+            <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+
+            <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex flex-shrink-0 items-center mr-20">
+            <a href="/">
+              <%=cl_image_tag("development/assets/2gather_logo.png", :height=>40, :quality=>"auto:low", :crop=>"scale")%>
+            </a>
           </div>
-          <div class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-            <div class="py-1" role="none">
-              <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
-              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Account settings</a>
-              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-1">Support</a>
-              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">License</a>
-              <form method="POST" action="#" role="none">
-                <button type="submit" class="text-gray-700 block w-full px-4 py-2 text-left text-sm" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
-              </form>
+
+          <div class="hidden sm:ml-6 sm:block flex align-center">
+            <div class="flex space-x-4">
+              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+              <a class="text-primary font-medium" href="/">Home</a>
+              <a class="text-primary font-medium" href="/clubs">Clubs</a>
+              <a class="text-primary font-medium" href="/about">About us</a>
             </div>
           </div>
         </div>
-      </li>
-    <%end%>
-  </ul>
+        <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+          <button type="button" class="relative rounded-full bg-yellow p-1 text-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+            <span class="absolute -inset-1.5"></span>
+            <span class="sr-only">View notifications</span>
+            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
+            </svg>
+          </button>
+
+          <!-- Profile dropdown -->
+          <div class="dropdown ml-10">
+            <div class="avatar" data-action="click->navbar#toggleMenu" data-navbar-target="avatar">
+              <%=cl_image_tag(current_user.avatar_url,height: 50, width: 50, crop: "scale", quality: "auto")%>
+            </div>
+            <div id="drop" class="dropdown-menu hide" aria-labelledby="dropdownMenuButton" data-navbar-target="menu">
+              <a class="dropdown-item" href="/profile/<%=current_user.id%>">Profile</a>
+              <a href="">My clubs</a>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Mobile menu, show/hide based on menu state. -->
+    <div class="hidden sm:hidden" data-navbar-target="mobileMenu">
+      <div class="space-y-1 px-2 pb-3 pt-2 flex flex-col">
+        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+        <a class="text-primary font-medium" href="/">Home</a>
+        <a class="text-primary font-medium" href="/clubs">Clubs</a>
+        <a class="text-primary font-medium" href="/about">About us</a>
+      </div>
+    </div>
+  <%else%>
+    <div class="mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <!-- Mobile menu button-->
+          <button type="button" data-action="click->navbar#toggleMobileMenu" class="relative inline-flex items-center justify-center rounded-md p-2 text-primary focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+            <span class="absolute -inset-0.5"></span>
+            <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+
+            <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between">
+          <div class="flex flex-shrink-0 items-center mr-20">
+            <a href="/">
+              <%=cl_image_tag("development/assets/2gather_logo.png", :height=>40, :quality=>"auto:low", :crop=>"scale")%>
+            </a>
+          </div>
+
+          <div class="hidden sm:ml-6 sm:block flex align-center">
+            <div class="flex space-x-4">
+              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+              <%= link_to "Login", new_user_session_path, class: "text-primary font-medium" %>
+              <%= link_to "Signup", new_user_registration_path, class: "text-primary font-medium" %>
+            </div>
+          </div>
+        </div>
+        <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+        </div>
+      </div>
+    </div>
+    <!-- Mobile menu, show/hide based on menu state. -->
+    <div class="hidden sm:hidden" data-navbar-target="mobileMenu">
+      <div class="space-y-1 px-2 pb-3 pt-2 flex flex-col">
+        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+        <%= link_to "Login", new_user_session_path, class: "text-primary font-medium" %>
+        <%= link_to "Signup", new_user_registration_path, class: "text-primary font-medium" %>
+
+      </div>
+    </div>
+  <%end%>
 </nav>
